<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ProfileFragment">

    <fragment
        android:id="@+id/RemindersFragment"
        android:name="hr.medick.fragments.ReminderFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_reminder">
<!--        <action-->
<!--            android:id="@+id/action_FirstFragment_to_SecondFragment"-->
<!--            app:destination="@id/SecondFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="hr.medick.fragments.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/VitalsFragment"
        android:name="hr.medick.fragments.VitalsFragment"
        android:label="@string/vitals"
        tools:layout="@layout/fragment_vitals">

<!--        <action-->
<!--            android:id="@+id/action_SecondFragment_to_FirstFragment"-->
<!--            app:destination="@id/FirstFragment" />-->
    </fragment>
</navigation>