<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.reminder.DoseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Unesite dozu lijeka"
            android:textSize="30sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center">
        <EditText
            android:id="@+id/medicationDose"
            android:inputType="number"
            android:layout_width="200dp"
            android:layout_height="40dp"/>
        <Spinner
            android:id="@+id/doseMetricSpinner"
            android:layout_width="@dimen/doseMetricSpinner_width"
            android:layout_height="@dimen/doseMetricSpinner_height"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
        </LinearLayout>
        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginHorizontal="@dimen/horizontal_margin_reminder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/nextBtn_marginTop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mislite_da_ste_ne_to_krivo_upisali"
            android:layout_gravity="center"
            android:textSize="@dimen/buttonTextLoginHereSize"/>

        <Button
            android:id="@+id/backBtn"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextLoginHereSize"
            android:text="@string/vrati_me_nazad"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>